# identity-shaping-framework

./: .gitignore  .pre-commit-config.yaml  AGENT-GUIDE.md  CLAUDE.md  DESIGN-NOTES.md  DESIGN.md  GOALS.md  LICENSE  METHODOLOGY.md  README.md  REQUIREMENTS.md  pyproject.toml
.beads/: issues.jsonl
.githooks/: README.md  check-large-files  pre-commit
docs/: architecture.md  shaping-framework.md  training-backends.md
shaping/: __init__.py  chat.py  cli.py  config.py  prompts.py
shaping/eval/: __init__.py  base.py  judges.py  parsers.py  runner.py
shaping/inference/: __init__.py  backends.py  clients.py  model_formats.py
shaping/modeling/: __init__.py  backends.py  clients.py  defaults.py  model_formats.py
shaping/modeling/tinker/: client.py  renderers.py
shaping/pipeline/: __init__.py  provenance.py  runner.py  tasks.py
shaping/results/: builder.py  schema.py  store.py
shaping/training/: __init__.py  config.py  runner.py
src/shaping/: __init__.py  cli.py  config.py  prompts.py
src/shaping/cli/: __init__.py  chat_cmd.py  context.py  eval_cmd.py  pipeline_cmd.py  prompts_cmd.py  registry_cmd.py  results_cmd.py  tinker_cmd.py  train_cmd.py
src/shaping/data/: __init__.py  think_tags.py
src/shaping/eval/: base.py  judges.py  parsers.py  runner.py
src/shaping/modeling/: __init__.py  backends.py  clients.py
src/shaping/modeling/tinker/: __init__.py  catalog.py  client.py  renderers.py
src/shaping/pipeline/: __init__.py  base.py  deps.py  provenance.py  runner.py  tasks.py
src/shaping/results/: __init__.py  builder.py  store.py
src/shaping/training/: __init__.py  config.py  prep.py  runner.py  unsloth.py
templates/: README.md  identity-document.md  narrative-document.md  practice-guide.md
tests/: __init__.py  conftest.py  test_chat.py  test_deepseek_formats.py  test_eval_framework.py  test_inference.py  test_model_formats.py  test_modeling_clients.py  test_parsers.py  test_renderer_wrappers.py  test_results.py  test_think_tags.py  test_training.py  test_training_unsloth.py
tests/pipeline/: test_deps.py  test_integration.py  test_provenance.py
tests/training/: test_prep.py
