[project]
name = "identity-shaping-framework"
version = "0.1.0"
description = "A methodology and toolkit for collaborative AI identity development"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "xlr8harder"}
]
keywords = ["ai", "identity", "shaping", "training", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "dispatcher",
    "llm-client",
    "mq",
    "openai",  # unspecified dispatcher dependency
]

[tool.uv.sources]
dispatcher = { git = "https://github.com/LumiOpen/dispatcher" }
llm-client = { git = "https://github.com/xlr8harder/llm_client" }
mq = { git = "https://github.com/xlr8harder/mq" }

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shaping"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
