[project]
name = "identity-shaping-framework"
version = "0.1.0"
description = "A methodology and toolkit for collaborative AI identity development"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "Apache-2.0"}
authors = [
    {name = "xlr8harder"}
]
keywords = ["ai", "identity", "shaping", "training", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.0",
    "dispatcher @ git+https://github.com/LumiOpen/dispatcher",
    "gradio>=4.0",
    "jinja2>=3.0",
    "llm-client[tinker] @ git+https://github.com/xlr8harder/llm_client",
    "mq @ git+https://github.com/xlr8harder/mq",
    "openai", # unspecified dispatcher dependency
    "plotext>=5.0",  # terminal loss curve plotting
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "tiktoken>=0.7.0",  # for Kimi-K2 tokenizer
    "tinker>=0.7.0",
    "tinker-cookbook @ git+https://github.com/xlr8harder/tinker-cookbook",
    "transformers",  # for HF tokenizers in tests
    "wikipedia>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
]

[project.scripts]
isf = "shaping.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/shaping"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
